--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,24 @@
         android:id="@+id/weatherFragment"
         android:name="kg.junesqo.weatherapp.ui.WeatherFragment"
         android:label="fragment_weather"
-        tools:layout="@layout/fragment_weather" />
+        tools:layout="@layout/fragment_weather" >
+        <argument android:name="cityName"
+            app:argType="java.lang.String"
+            android:defaultValue="Bishkek"
+            app:nullable="true"/>
+        <action
+            android:id="@+id/action_weatherFragment_to_weatherSearchFragment"
+            app:destination="@id/weatherSearchFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/weatherSearchFragment"
+        android:name="kg.junesqo.weatherapp.ui.weather_search.WeatherSearchFragment"
+        android:label="WeatherSearchFragment">
+        <argument android:name="cityName"
+            app:argType="string"
+            app:nullable="false"/>
+        <action
+            android:id="@+id/action_weatherSearchFragment_to_weatherFragment"
+            app:destination="@id/weatherFragment" />
+    </fragment>
 </navigation>
